--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -2,36 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "91c85403",
+   "execution_count": 24,
+   "id": "4da20b68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import r2_score\n",
-    "import pickle"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c1387697",
+   "execution_count": 25,
+   "id": "6ce52226",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "df = pd.read_csv(\"salary_data.csv\")\n"
+    "df = pd.read_csv(\"salary_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "60562702",
+   "execution_count": 26,
+   "id": "b49080eb",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +189,7 @@
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,8 +200,372 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "60f408d8",
+   "execution_count": 27,
+   "id": "abc7ded5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 7)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1598a975",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Education   1000 non-null   object \n",
+      " 1   Experience  1000 non-null   int64  \n",
+      " 2   Location    1000 non-null   object \n",
+      " 3   Job_Title   1000 non-null   object \n",
+      " 4   Age         1000 non-null   int64  \n",
+      " 5   Gender      1000 non-null   object \n",
+      " 6   Salary      1000 non-null   float64\n",
+      "dtypes: float64(1), int64(2), object(4)\n",
+      "memory usage: 54.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "45520378",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>14.771000</td>\n",
+       "      <td>42.377000</td>\n",
+       "      <td>105558.404238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.341111</td>\n",
+       "      <td>13.609412</td>\n",
+       "      <td>28256.972074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>33510.510670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>85032.141520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>104314.518300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>126804.047550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>193016.602100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Experience          Age         Salary\n",
+       "count  1000.000000  1000.000000    1000.000000\n",
+       "mean     14.771000    42.377000  105558.404238\n",
+       "std       8.341111    13.609412   28256.972074\n",
+       "min       1.000000    20.000000   33510.510670\n",
+       "25%       7.000000    30.000000   85032.141520\n",
+       "50%      15.000000    43.000000  104314.518300\n",
+       "75%      22.000000    55.000000  126804.047550\n",
+       "max      29.000000    64.000000  193016.602100"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ba26fdb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Job_Title</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Education  Experience  Location  Job_Title    Age  Gender  Salary\n",
+       "0        False       False     False      False  False   False   False\n",
+       "1        False       False     False      False  False   False   False\n",
+       "2        False       False     False      False  False   False   False\n",
+       "3        False       False     False      False  False   False   False\n",
+       "4        False       False     False      False  False   False   False\n",
+       "..         ...         ...       ...        ...    ...     ...     ...\n",
+       "995      False       False     False      False  False   False   False\n",
+       "996      False       False     False      False  False   False   False\n",
+       "997      False       False     False      False  False   False   False\n",
+       "998      False       False     False      False  False   False   False\n",
+       "999      False       False     False      False  False   False   False\n",
+       "\n",
+       "[1000 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fd3e03ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Education     0\n",
+       "Experience    0\n",
+       "Location      0\n",
+       "Job_Title     0\n",
+       "Age           0\n",
+       "Gender        0\n",
+       "Salary        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "589561da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,75 +575,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2274ea56",
+   "execution_count": 33,
+   "id": "3f21c51a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[features + [target]].dropna()"
+    "df = df[features + [target]]\n",
+    "df = df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8ea59353",
+   "execution_count": 34,
+   "id": "453c9142",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Job_Title</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>High School</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>84620.05366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PhD</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Suburban</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>142591.25590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Suburban</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>61</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>97800.25540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>High School</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>96834.67128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PhD</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>Analyst</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>132157.78620</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Education  Experience  Location Job_Title  Age  Gender        Salary\n",
+       "0  High School           8     Urban   Manager   63    Male   84620.05366\n",
+       "1          PhD          11  Suburban  Director   59    Male  142591.25590\n",
+       "2     Bachelor          28  Suburban   Manager   61  Female   97800.25540\n",
+       "3  High School          29     Rural  Director   45    Male   96834.67128\n",
+       "4          PhD          25     Urban   Analyst   26  Female  132157.78620"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8d4c34fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df[features]\n",
-    "y = df[target]"
+    "y = df[target]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "519b143b",
+   "execution_count": 36,
+   "id": "57a39bfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorical_features = ['Education', 'Location', 'Job_Title', 'Gender']\n"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "categorical = ['Education', 'Location', 'Job_Title', 'Gender']\n",
+    "encoder = ColumnTransformer([('cat', OneHotEncoder(handle_unknown='ignore'), categorical)], remainder='passthrough')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f68a9336",
+   "execution_count": 37,
+   "id": "a9af96a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessor = ColumnTransformer([\n",
-    "    ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_features)\n",
-    "], remainder='passthrough')\n",
-    "\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "model = Pipeline([('preprocessor', encoder),('regressor', LinearRegression())])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "114b2d12",
+   "execution_count": 38,
+   "id": "da50b254",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Pipeline([\n",
-    "    ('preprocessor', preprocessor),\n",
-    "    ('regressor', LinearRegression())\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "5ae1c57a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f7ebcb58",
+   "execution_count": 39,
+   "id": "f4093663",
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1576,7 @@
        "                ('regressor', LinearRegression())])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,8 +1587,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "9879b907",
+   "execution_count": 40,
+   "id": "6ea9c3b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "de92601d",
    "metadata": {},
    "outputs": [
     {
@@ -1144,26 +1610,27 @@
     }
    ],
    "source": [
-    "y_pred = model.predict(X_test)\n",
+    "from sklearn.metrics import r2_score\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "print(\"Model R² Score:\", round(r2 * 100, 2), \"%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "0769d9b2",
+   "execution_count": 42,
+   "id": "0059a66d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "with open(\"salary_model.pkl\", \"wb\") as f:\n",
     "    pickle.dump(model, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "2975b729",
+   "execution_count": 43,
+   "id": "2d78beab",
    "metadata": {},
    "outputs": [],
    "source": [
